@@ -6,15 +6,64 @@
         <modelVersion>4.0.0</modelVersion>
 
         <parent>
-            <groupId>com.github.sfg-beer-works</groupId>
-            <artifactId>sfg-brewery-bom</artifactId>
-            <version>1.0.10</version>
+            <groupId>guru.springframework</groupId>
+            <artifactId>mssc-brewery-bom</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </parent>
 
-        <groupId>guru.springframework</groupId>
-        <artifactId>mssc-beer-inventory-service</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
-        <name>mssc-beer-inventory-service</name>
-        <description>MSSC Beer Inventory Service</description>
+    <groupId>guru.springframework</groupId>
+    <artifactId>mssc-beer-inventory-service</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>mssc-beer-inventory-service</name>
+    <description>MSSC Beer Inventory Service</description>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>11</java.version>
+        <jaxb.version>2.3.0</jaxb.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <maven-enforcer-plugin.version>3.0.0-M2</maven-enforcer-plugin.version>
+        <org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
+        <org.projectlombok.version>1.18.10</org.projectlombok.version>
+        <swagger-request-validator.version>2.7.0</swagger-request-validator.version>
+        <!--Surefire plugin argLine value to suppress UnresolvedMavenProperty -->
+        <argLine>--illegal-access=permit</argLine>
+        <kotlin.version>1.3.50</kotlin.version>
+        <awaitility.version>4.0.1</awaitility.version>
+
+    </properties>
+
+
+<dependencies>
+
+    <dependency>
+        <groupId>javax.jms</groupId>
+        <artifactId>javax.jms-api</artifactId>
+        <version>2.0.1</version>
+    </dependency>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-junit-jupiter</artifactId>
+        <scope>test</scope>
+    </dependency>
+
+    <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <optional>true</optional>
+    </dependency>
+</dependencies>
 
 </project>
+
